Apply tighter font sizes and spacing in checkout (#59787)
* Apply tighter font sizes and spacing in checkout (common components + some blocks) (#59518)

* Introduce new mixins

* Some whitespace between style declarations

* Treat form step title as heading

* Change font-size for form step title

* Change font size and spacing in form step

* Change font size in second address line toggle

* Change font size and spacing in express checkout block

* Remove unnecessary class name

* Reduce spacing in contact information block

* Remove commented line

* CheckoutShippingMethodBlock changes

* Reduce gap between the items within RadioControl component

* Local pickup changes

* Reduce spacing when notice for no valid shipment methods is visible

* Reduce spacing around no shipping address message

* Shipping and local pickup, finish adjustements

* Fix lint error

* Remove snapshots and port tests to TypeScript and Testing Library

* Fix express payments tests

* Remove top margin on country selector for mobile

* Update shipping and payment skeletons

* Update height of skeleton for express payments title

* Remove flex with gap in form step layout

* Fix some TypeScript errors while we're here

* Fix tests

* Add changelog

* Apply consistent font sizes and spacing in checkout (shipping and billing blocks) (#59754)

* Remove unnecessary xmlnx attribute

* Change checkbox styles

* TextInput 😌

* Update snapshots

* Country select

* Don't use global styles in attribute filter block

* Smaller horizontal gap between form elements

* Reset line-height for checkbox

* Comment that actually makes sense

* Modify address card

* Move phone to the same line as address in address block

* Apply 16px font-size in text input for mobile

* Reset line-height for select container element

* Be consistent with comments

* Fix misaligned select component

* Bring back explicit height for text-input and select components

* Remove duplicated height declaration

* Apply consistent f

--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
@@ -13,11 +13,11 @@ table.wc-block-cart-items {
 	width: 100%;
 
 	.wc-block-cart-items__header {
-		@include font-size(smaller);
+		@include font-small-locked;
 		text-transform: uppercase;
 
 		.wc-block-cart-items__header-image {
-			width: 100px;
+			width: 80px;
 		}
 		.wc-block-cart-items__header-product {
 			visibility: hidden;
@@ -33,7 +33,7 @@ table.wc-block-cart-items {
 	.wc-block-cart-items__row {
 		.wc-block-cart-item__wrap > *,
 		.wc-block-components-quantity-selector {
-			margin-bottom: $gap-small;
+			margin-bottom: $gap-smaller * 1.25;
 		}
 
 		.wc-block-cart-item__wrap > *:last-child {
@@ -45,10 +45,14 @@ table.wc-block-cart-items {
 			margin: 0;
 		}
 		.wc-block-cart-item__prices {
-			line-height: 1.2;
+			@include font-regular-locked;
 		}
 
 		.wc-block-cart-item__quantity {
+			display: flex;
+			flex-direction: column;
+			align-items: start;
+
 			.wc-block-cart-item__remove-link {
 				@include link-button();
 				@include hover-effect();
@@ -62,6 +66,7 @@ table.wc-block-cart-items {
 			}
 		}
 		.wc-block-components-product-name {
+			@include font-regular-locked;
 			display: block;
 			max-width: max-content;
 			line-height: 1.4;
@@ -70,7 +75,7 @@ table.wc-block-cart-items {
 			}
 		}
 		.wc-block-cart-item__total {
-			@include font-size(regular);
+			@include font-regular-locked;
 			text-align: right;
 			line-height: 1.8;
 		}
@@ -158,12 +163,12 @@ table.wc-block-cart-items {
 			border-bottom: 1px solid $universal-border-light;
 
 			th {
-				padding: $gap-smaller $gap $gap-smaller 0;
+				padding: $gap-smaller $gap $gap 0;
 				white-space: nowrap;
 			}
 			td {
 				border-top: 1px solid $universal-border-light;
-				padding: $gap-large 0 $gap-large $gap;
+				padding: $gap * 1.25 0 $gap * 1.25 $gap;
 				vertical-align: top;
 			}
 			th:last-child {
