--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/styles/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/styles/style.scss
@@ -16,18 +16,28 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
+
+		.wc-block-components-radio-control
+			.wc-block-components-radio-control__input {
+			// We want it to stick to the top, since it has position: absolute we
+			// can position it to be aligned with the top padding value.
+			top: $gap;
+			transform: none;
+		}
 	}
 	.wc-block-checkout__login-prompt {
 		float: right;
 		margin-top: -$gap-large;
-		@include font-size(regular);
+		font-weight: 400;
+		line-height: $gap * 1.25;
+		@include font-regular-locked;
 	}
 	.wc-block-checkout__create-account {
-		margin-top: $gap-large !important;
+		margin-top: $gap !important;
 	}
 	.wc-block-checkout__guest-checkout-notice {
+		@include font-small-locked;
 		margin: $gap-smallest 0 0;
-		@include font-size(smaller);
 	}
 }
 
