--- a/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
+++ b/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
@@ -18,6 +18,29 @@ $fontSizes: (
 	font-size: map.get($fontSizes, $sizeName) * $multiplier;
 }
 
+@mixin font-large-locked {
+	font-size: var(--wp--preset--font-size--medium, 22px);
+	line-height: 27px;
+}
+
+@mixin font-regular-locked {
+	font-size: var(--wp--preset--font-size--small, 14px);
+	line-height: 20px;
+}
+
+@mixin font-small-locked {
+	font-size: 13px;
+	line-height: 16px;
+}
+
+// We're treating mobile inputs as a special case, increasing the font-size to
+// 16px to avoid mobile Safari auto-zooming when focusing on the input. The
+// minimum font-size to prevent this behavior is 16px. Please don't change it!
+@mixin font-for-mobile-inputs-locked {
+	font-size: 16px;
+	line-height: 20px;
+}
+
 @mixin spinner-animation() {
 	@keyframes spinner__animation {
 		0% {
