--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/product-metadata/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/product-metadata/style.scss
@@ -1,8 +1,8 @@
 .wc-block-components-product-metadata {
-	@include font-size(smaller);
+	@include font-regular-locked;
 
 	.wc-block-components-product-metadata__description > p,
 	.wc-block-components-product-metadata__variation-data {
-		margin: 0.25em 0;
+		margin: 0;
 	}
 }
