--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
@@ -5,13 +5,13 @@
 	}
 
 	.wc-block-components-totals-item__label {
-		font-weight: 700;
+		font-weight: 500;
 	}
 
 	.wc-block-components-totals-footer-item-tax {
 		margin-bottom: 0;
 		margin-top: 0;
-		font-weight: 700;
+		font-weight: 500;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
@@ -28,6 +28,11 @@
 	}
 
 	.wc-block-components-totals-item__value {
-		font-weight: 700;
+		font-weight: 500;
+	}
+
+	.wc-block-components-totals-item__value,
+	.wc-block-components-totals-item__label {
+		@include font-large-locked;
 	}
 }
