--- a/plugins/woocommerce/client/blocks/assets/js/base/components/select/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/select/style.scss
@@ -8,8 +8,9 @@
 		box-sizing: border-box;
 		background: $input-background-light;
 		width: 100%;
-		height: 3.125em;
 		position: relative;
+		// Resetting line-height to avoid any unnecessary space around the input
+		line-height: 0;
 
 		.has-dark-controls & {
 			background-color: $input-background-dark;
@@ -28,19 +29,32 @@
 
 	.wc-blocks-components-select__select {
 		@include reset-typography();
-		@include font-size(regular);
+		font-size: 16px;
+		line-height: 22px;
 		border-radius: $universal-border-radius;
 		width: 100%;
-		height: 100%;
 		appearance: none;
 		background: none;
-		padding: em($gap) em($gap-smaller) 0;
 		color: $input-text-light;
 		border: 1px solid $universal-border-strong;
+		box-sizing: border-box;
+
+		padding: $gap-large - 3px $gap-smaller + 1px $gap-smaller;
+
+		// We are hardcoding the height to reserve space for a wider border that
+		// we apply for focused state. Without it, when focusing the input its
+		// height will increase by 1px, causing the rest of the form to shift.
+		// height = font line-height + vertical padding + focused top/bottom border
+		// Don't worry, this calculation won't be performed at runtime, SCSS
+		// is transforming it into a singular value during build time.
+		height: calc(15px + 16px * 2 + 1.5px * 2);
 
 		&:focus {
 			border-color: currentColor;
 			border-width: 1.5px;
+			// original padding - border size
+			padding-left: $gap-smaller + 0.5px;
+			padding-top: $gap-large - 3.5px;
 		}
 
 		.has-dark-controls & {
@@ -58,19 +72,16 @@
 
 	.wc-blocks-components-select__label {
 		@include reset-typography();
-		@include font-size(regular);
+		@include font-small-locked;
 		position: absolute;
-		line-height: 1.25; // =20px when font-size is 16px.
-		left: em($gap-smaller);
-		top: 2px;
-		transform-origin: top left;
-		transition: all 200ms ease;
-		color: $input-text-light;
+		top: $gap-smallest * 1.5;
+		left: $gap-smaller * 1.25;
+
 		z-index: 1;
 		margin: 0;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		max-width: calc(100% - #{2 * $gap});
+		max-width: calc(100% - #{2 * $gap-small});
 		white-space: nowrap;
 
 		.has-dark-controls & {
@@ -80,12 +91,6 @@
 		.has-error & {
 			color: $alert-red;
 		}
-
-		@media screen and (prefers-reduced-motion: reduce) {
-			transition: none;
-		}
-
-		transform: translateY(15%) scale(0.75);
 	}
 
 	.wc-blocks-components-select__expand {
