--- a/plugins/woocommerce/client/blocks/assets/js/base/components/skeleton/patterns/checkout-shipping/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/skeleton/patterns/checkout-shipping/style.scss
@@ -1,7 +1,7 @@
 .wc-block-components-skeleton.wc-block-components-skeleton--checkout-shipping {
 	border: 1px solid color-mix(in srgb, currentColor 10%, transparent);
 	border-radius: $universal-border-radius;
-	padding: 0.875em;
+	padding: $gap;
 	display: grid;
 	grid-template-columns: 20px 1fr 50px;
 	gap: $gap;
