--- a/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/cart-checkout-shared/payment-methods/style.scss
@@ -1,202 +1,10 @@
-.wc-block-card-elements {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-
-	.wc-block-components-validation-error {
-		position: static;
-	}
-}
-
-.wc-block-gateway-container {
-	position: relative;
-	margin-bottom: em($gap-large);
-	margin-top: $gap-smaller;
-	white-space: nowrap;
-
-	&.wc-card-number-element {
-		flex-basis: 100%;
-		flex-grow: 1;
-		// Currently, min() CSS function calls need to be wrapped with unquote.
-		min-width: string.unquote("min(15em, 60%)");
-	}
-
-	&.wc-card-expiry-element {
-		flex-basis: calc(50% - #{$gap-smaller});
-		margin-left: 0;
-		margin-right: $gap-smaller;
-		min-width: string.unquote("min(7em, calc(24% - #{$gap-small}))");
-	}
-
-	&.wc-card-cvc-element {
-		flex-basis: calc(50% - #{$gap-smaller});
-		margin-left: $gap-smaller;
-		// Notice the min width ems value is smaller than flex-basis. That's because
-		// by default we want it to have the same width as `expiry-element`, but
-		// if available space is scarce, `cvc-element` should get smaller faster.
-		min-width: string.unquote("min(5em, calc(16% - #{$gap-small}))");
-	}
-
-	.wc-block-gateway-input {
-		@include font-size(regular);
-		line-height: 1.375; // =22px when font-size is 16px.
-		background-color: #fff;
-		padding: em($gap-small) 0 em($gap-small) $gap;
-		border-radius: $universal-border-radius;
-		border: 1px solid $universal-border-strong;
-		width: 100%;
-		font-family: inherit;
-		margin: 0;
-		box-sizing: border-box;
-		height: 3em;
-		color: $input-text-light;
-		cursor: text;
-
-		&:focus {
-			background-color: #fff;
-		}
-	}
-
-	&:focus {
-		background-color: #fff;
-	}
-
-	label {
-		@include reset-color();
-		@include reset-typography();
-		@include font-size(regular);
-		line-height: 1.375; // =22px when font-size is 16px.
-		position: absolute;
-		transform: translateY(0.75em);
-		left: 0;
-		top: 0;
-		transform-origin: top left;
-		color: $gray-700;
-		transition: transform 200ms ease;
-		margin: 0 0 0 #{$gap + 1px};
-		overflow: hidden;
-		text-overflow: ellipsis;
-		max-width: calc(100% - #{$gap + $gap-smaller});
-		cursor: text;
-
-		@media screen and (prefers-reduced-motion: reduce) {
-			transition: none;
-		}
-	}
-
-	&.wc-inline-card-element {
-		label {
-			// $gap is the padding of the input box, 1.5em the width of the card
-			// icon and $gap-smaller the space between the card
-			// icon and the label.
-			margin-left: calc(#{$gap + $gap-smaller} + 1.5em);
-		}
-		.wc-block-gateway-input.focused.empty,
-		.wc-block-gateway-input:not(.empty) {
-			+ label {
-				margin-left: $gap;
-				transform: translateY(#{$gap-smallest}) scale(0.75);
-			}
-		}
-		+ .wc-block-components-validation-error {
-			position: static;
-			margin-top: -$gap-large;
-		}
-	}
-
-	.wc-block-gateway-input.focused.empty,
-	.wc-block-gateway-input:not(.empty) {
-		padding: em($gap-large) 0 em($gap-smallest) $gap;
-		+ label {
-			transform: translateY(#{$gap-smallest}) scale(0.75);
-		}
-	}
-
-	.wc-block-gateway-input.has-error {
-		border-color: $alert-red;
-		&:focus {
-			outline-color: $alert-red;
-		}
-	}
-
-	.wc-block-gateway-input.has-error + label {
-		color: $alert-red;
-	}
-}
-
-// These elements have available space below, so we can display errors with a
-// larger line height.
-@mixin medium-large-styles {
-	.wc-card-expiry-element,
-	.wc-card-cvc-element {
-		.wc-block-components-validation-error > p {
-			line-height: 16px;
-			padding-top: 4px;
-		}
-	}
-}
-
-@include cart-checkout-medium-container {
-	@include medium-large-styles;
-}
-@include cart-checkout-large-container {
-	@include medium-large-styles;
-}
-
-@mixin small-mobile-styles {
-	.wc-card-expiry-element,
-	.wc-card-cvc-element {
-		.wc-block-components-validation-error > p {
-			min-height: 28px;
-		}
-	}
-
-	.wc-block-gateway-container.wc-card-expiry-element,
-	.wc-block-gateway-container.wc-card-cvc-element {
-		flex-basis: 100%;
-		margin-left: 0;
-		margin-right: 0;
-	}
-}
-
-/*
- * Non standard container query for narrow viewports.
- *
- * A non-standard container query is required here for accessibility.
- * Ems are used in order to prevent text being cropped in the credit
- * card form based on the font size set for the element.
- *
- * See: https://github.com/woocommerce/woocommerce/issues/60516
- */
-@container (max-width: 32em) {
-	@include small-mobile-styles;
-}
-
 .wc-block-components-checkout-payment-methods * {
 	pointer-events: all; // Overrides parent disabled component in editor context
 }
 
 .wc-block-checkout__payment-method {
-	.wc-block-components-radio-control__option {
-		padding-left: em($gap-huge);
-		padding-right: em($gap-small);
-
-		&::after {
-			content: none;
-		}
-
-		.wc-block-components-radio-control__input {
-			left: 16px;
-		}
-	}
-
-	// We need to add the first-child and last-child pseudoclasses for specificity.
-	.wc-block-components-radio-control__option,
-	.wc-block-components-radio-control__option:first-child,
-	.wc-block-components-radio-control__option:last-child {
-		margin: 0;
-		padding-bottom: em($gap);
-		padding-top: em($gap);
+	.wc-block-components-radio-control__option::after {
+		content: none;
 	}
 
 	.wc-block-components-radio-control-accordion-option
@@ -241,7 +49,7 @@
 
 	.wc-block-components-radio-control.disable-radio-control {
 		.wc-block-components-radio-control__option {
-			padding-left: 16px;
+			padding-left: $gap;
 		}
 
 		.wc-block-components-radio-control__input {
@@ -250,21 +58,18 @@
 	}
 
 	.wc-block-components-checkout-step__description-payments-aligned {
-		padding-top: 14px;
-		height: 28px;
+		@include font-regular-locked;
+		margin: 0;
+		padding-top: $gap-small;
+		padding-bottom: $gap-smaller;
 	}
 }
 .wc-block-components-radio-control-accordion-content {
-	padding: 0 em($gap) em($gap);
+	@include font-regular-locked;
+	padding: 0 $gap $gap;
 
 	&:empty,
 	&:has(> *:only-child:empty) {
 		display: none;
-	}
-}
-
-.wc-block-checkout__order-notes {
-	.wc-block-components-checkout-step__content {
-		padding-bottom: 0;
 	}
 }
