--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
@@ -1,21 +1,18 @@
 .wc-block-checkout__pickup-options,
 .wp-block-woocommerce-checkout-pickup-options-block {
 	.wc-block-components-local-pickup-rates-control {
-		.wc-block-components-radio-control__option {
-			margin: 0;
-			padding: em($gap) em($gap-small) em($gap) em($gap-huge);
-		}
-		.wc-block-components-shipping-rates-control__no-results-notice {
-			margin: em($gap-small) 0;
-		}
 		.wc-block-components-radio-control
 			.wc-block-components-radio-control__input {
-			top: auto;
+			// We want it to stick to the top, since it has position: absolute we
+			// can position it to be aligned with the top padding value.
+			top: $gap;
 			transform: none;
 		}
+
 		.wc-block-components-radio-control__option-layout {
 			display: block;
 		}
+
 		.wc-block-components-radio-control__label-group {
 			width: 100%;
 			display: flex;
@@ -24,16 +21,17 @@
 				margin-left: auto;
 			}
 		}
+
 		.wc-block-components-radio-control__label-group {
 			em {
 				text-transform: uppercase;
 				font-style: inherit;
 			}
 		}
+
 		.wc-block-components-radio-control__option-checked {
 			.wc-block-components-radio-control__description-group {
 				.read-more-content {
-					margin-left: em($gap-small * 0.25);
 					position: initial;
 					visibility: visible;
 					z-index: initial;
@@ -42,44 +40,49 @@
 				}
 			}
 		}
+
 		.wc-block-components-radio-control__description-group {
-			display: block;
-			width: calc(100% + em(math.div($gap-huge, 0.875)));
+			@include font-regular-locked;
+
+			display: flex;
+			flex-direction: column;
+			gap: $gap-smallest;
+			margin-top: $gap-smallest;
+
 			box-sizing: border-box;
-			border-radius: $universal-border-radius;
-			padding: 1px em($gap-small);
-			margin-left: -(em($gap-huge));
-			margin-top: em($gap);
-			@include font-size(regular);
+
 			.read-more-content {
 				position: absolute;
 				visibility: hidden;
 				z-index: -1;
 			}
 		}
+
 		.wc-block-components-radio-control__description,
 		.wc-block-components-radio-control__secondary-description {
 			width: 100%;
 			text-align: left;
 			margin: 0;
 			display: block;
-			@include font-size(regular);
 		}
-		.wc-block-components-radio-control__description
-			+ .wc-block-components-radio-control__secondary-description {
-			margin-top: em($gap-small);
-		}
+
 		.wc-block-components-radio-control__description {
+			display: flex;
+			align-items: center;
+			gap: $gap-smallest;
+
 			color: $gray-700;
 
 			.has-dark-controls & {
 				color: $gray-300;
 			}
 
-			> svg {
-				vertical-align: middle;
-				margin-top: -4px;
+			.wc-block-editor-components-block-icon {
 				fill: currentColor;
+				// Pixel perfect alignement needed as internal padding of the SVG
+				// is inconsistent (top one bigger that the bottom one).
+				margin-top: -2px;
+				margin-left: -3px;
 			}
 		}
 	}
