--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/editor.scss
@@ -13,24 +13,15 @@
 
 // Adjust padding and margins in the editor to improve selected block outlines.
 .wc-block-checkout__terms {
-	margin: 0 0 $gap-largest 0;
+	margin: 0 0 $gap-larger 0;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	display: flex;
 	align-items: flex-start;
-
-	.block-editor-rich-text__editable {
-		vertical-align: middle;
-		line-height: em(24px);
-	}
 }
 
-.wc-block-components-checkbox {
-	margin-top: 0;
-
-	&.wc-block-checkout__create-account {
-		margin-top: 1em;
-	}
+.wc-block-checkout__terms-checkbox-wrapper {
+	margin-right: $gap-small;
 }
 
 .wc-block-checkout__terms_notice {
