--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/style.scss
@@ -1,20 +1,17 @@
 .wc-block-checkout__terms {
-	margin: 0 0 $gap-largest;
-
-	@include cart-checkout-below-large-container {
-		margin-bottom: $gap-larger;
-		padding-top: $gap-largest;
-
-		&.wc-block-checkout__terms--with-separator {
-			padding-top: $gap-larger;
-		}
-	}
+	@include font-regular-locked;
+	margin: 0 0 $gap-large;
 
 	&.wc-block-checkout__terms--with-separator {
-		padding-top: $gap-largest;
+		padding-top: $gap-large;
 		border-top: 1px solid $universal-border-light;
 
+		.has-dark-controls & {
+			border-top-color: $input-border-dark;
+		}
+
 		@include cart-checkout-below-large-container {
+			padding-top: 0;
 			border-top: 0;
 		}
 	}
