--- a/plugins/woocommerce/client/blocks/packages/components/form-step/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/form-step/style.scss
@@ -7,47 +7,11 @@
 	border: none;
 	padding: 0;
 	background: none;
-	margin: 0 0 $gap-largest 0;
+	margin: 0 0 $gap-large 0;
 
-	@include cart-checkout-below-medium-container {
-		padding-left: 0;
-		margin-bottom: $gap-larger;
-
-		// The below CSS rules show a separator between Checkout steps on mobile.
-		// This media query is required because on themes where the Checkout
-		// block is rendered alongside something else, e.g. Storefront using the
-		// "Default Template" (which has a sidebar) the checkout block can get
-		// the `.is-small` class, but the screen itself is larger than 400px.
-		@include breakpoint("<600px") {
-			padding-top: $gap-larger;
-
-			// Remove padding from the first checkout step. First of type is
-			// required here as the first-child is the express payment methods
-			// block.
-			&:first-of-type {
-				padding-top: 0;
-			}
-
-			&::after {
-				position: absolute;
-				content: "";
-				// Required because the box shadows are offset by 1px down so we
-				// need to move the element up by 1px.
-				bottom: calc(1px - $gap-larger);
-				width: 100%;
-				height: 1px;
-				opacity: 0.11;
-				background: currentColor;
-				// This box-shadow rule creates two visible shadows:
-				// - One 50vw to the left of the element.
-				// - Another 50vw to the right
-				// Both shadows are sharp (no blur) and use the current color of the element.
-				// Its purpose is to add a full-width divider between checkout
-				// sections which is otherwise impossible as the parent element has
-				// padding.
-				box-shadow: -50vw 0 0 0 currentColor, 50vw 0 0 0 currentColor;
-			}
-		}
+	.wc-block-components-text-input:first-of-type,
+	.wc-block-components-country-input {
+		margin-top: 0;
 	}
 }
 
@@ -79,11 +43,10 @@
 }
 
 .wc-block-checkout__contact-fields .wc-block-components-checkout-step__heading {
-	margin-top: em($gap-smaller);
+	margin-top: 0;
 }
 
 .wc-block-components-checkout-step__heading {
-	margin: 0 0 $gap-smaller;
 	position: relative;
 
 	.wc-block-components-express-payment-continue-rule
@@ -98,8 +61,16 @@
 	margin-top: 0;
 }
 
+.wc-block-components-checkout-step__heading-container {
+	display: flex;
+	flex-direction: column;
+	gap: $gap-smaller;
+	margin-bottom: $gap;
+}
+
 .wc-block-components-checkout-step__title {
-	margin: 0 $gap-small 0 0;
+	margin: 0;
+	margin-right: $gap-small;
 }
 
 .wc-block-components-checkout-step__heading-content {
@@ -111,15 +82,9 @@
 	}
 }
 
-.wc-block-checkout__shipping-option .wc-block-components-checkout-step__content,
-.wc-block-checkout__payment-method .wc-block-components-checkout-step__content {
-	padding-top: $gap-smaller;
-}
-
 .wc-block-components-checkout-step__description {
-	@include font-size(small);
-	line-height: 1.2;
-	margin: 0 0 $gap;
+	@include font-regular-locked;
+	margin: 0;
 }
 
 .wc-block-checkout__form--with-step-numbers {
@@ -160,17 +125,33 @@
 			}
 		}
 
-		.wc-block-components-checkout-step__container::after {
+		.wc-block-components-checkout-step__description,
+		.wc-block-components-checkout-step__content {
+			position: relative;
+		}
+
+		.wc-block-components-checkout-step__description::before,
+		.wc-block-components-checkout-step__content::before {
 			content: "";
-			height: 100%;
 			border-left: 1px solid $universal-border-light;
 			position: absolute;
 			left: -$gap-large;
 			top: 0;
+			bottom: 0;
+
+			.has-dark-controls & {
+				border-left-color: $input-border-dark;
+			}
+		}
+
+		.wc-block-components-checkout-step__description::before {
+			bottom: -$gap;
 		}
 
 		.is-mobile &,
 		.is-small & {
+			padding: 0;
+
 			.wc-block-components-checkout-step__title::before {
 				position: static;
 				transform: none;
@@ -180,8 +161,9 @@
 				content: counter(checkout-step) ".\00a0"/ "";
 			}
 
-			.wc-block-components-checkout-step__container::after {
-				content: unset;
+			.wc-block-components-checkout-step__description::before,
+			.wc-block-components-checkout-step__content::before {
+				display: none;
 			}
 		}
 	}
