--- a/plugins/woocommerce/client/blocks/packages/components/text-input/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/text-input/style.scss
@@ -1,8 +1,10 @@
 .wc-block-components-form .wc-block-components-text-input,
 .wc-block-components-text-input {
 	position: relative;
-	margin-top: $gap;
+	margin-top: $gap-small;
 	white-space: nowrap;
+	// Resetting line-height to avoid any unnecessary space around the input
+	line-height: 0;
 
 	.wc-block-components-text-input__wrapper {
 		position: relative;
@@ -11,19 +13,18 @@
 	label {
 		@include reset-color();
 		@include reset-typography();
-		@include font-size(regular);
+		font-size: 16px;
+		line-height: 22px;
 		position: absolute;
 		transform: translateY(-50%);
-		line-height: 1.5;
-		left: em($gap-smaller + 1px);
-		top: 1.562em;
+		left: $gap-smaller * 1.25;
+		top: 25px;
 		transform-origin: top left;
-		color: $universal-body-low-emphasis;
 		transition: all 200ms ease;
 		margin: 0;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		max-width: calc(100% - #{2 * $gap});
+		max-width: calc(100% - #{2 * $gap-small});
 		cursor: text;
 
 		.has-dark-controls & {
@@ -34,35 +35,32 @@
 		}
 	}
 
-	input[type="number"] {
-		-moz-appearance: textfield;
-		&::-webkit-outer-spin-button,
-		&::-webkit-inner-spin-button {
-			appearance: none;
-			margin: 0;
-		}
-	}
-
 	input[type="tel"],
 	input[type="url"],
 	input[type="text"],
 	input[type="number"],
 	input[type="password"],
 	input[type="email"] {
-		@include font-size(regular);
-		padding: em($gap) em($gap-smaller);
-		line-height: em($gap);
+		@include reset-typography();
+		@include font-regular-locked;
+		padding: $gap $gap-small;
 		width: 100%;
 		border-radius: $universal-border-radius;
 		border: 1px solid $universal-border-strong;
 
-		font-family: inherit;
 		margin: 0;
 		box-sizing: border-box;
 		min-height: 0;
-		height: 3.125em;
 		background-color: $input-background-light;
 		color: $input-text-light;
+
+		// We are hardcoding the height to reserve space for a wider border that
+		// we apply for focused state. Without it, when focusing the input its
+		// height will increase by 1px, causing the rest of the form to shift.
+		// height = font line-height + vertical padding + focused top/bottom border
+		// Don't worry, this calculation won't be performed at runtime, SCSS
+		// is transforming it into a singular value during build time.
+		height: calc(15px + 16px * 2 + 1.5px * 2);
 
 		&:focus {
 			background-color: $input-background-light;
@@ -83,6 +81,17 @@
 		}
 	}
 
+	input[type="number"] {
+		appearance: textfield;
+		-moz-appearance: textfield;
+
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			appearance: none;
+			margin: 0;
+		}
+	}
+
 	input:-webkit-autofill,
 	&.is-active input[type="tel"],
 	&.is-active input[type="url"],
@@ -90,13 +99,19 @@
 	&.is-active input[type="number"],
 	&.is-active input[type="password"],
 	&.is-active input[type="email"] {
-		padding: em($gap + $gap-smaller) em($gap-smaller) em($gap-smaller);
+		padding: $gap-large $gap-smaller + 1px $gap-smaller;
+
+		&:focus {
+			padding-top: $gap-large;
+			padding-left: $gap-smaller + 0.5px;
+		}
 	}
 
 	&.is-active label,
 	input:-webkit-autofill + label {
-		transform: translateY(#{$gap-smallest}) scale(0.75);
-		top: 0;
+		// We use scale transform as we can animate it.
+		transform: scale(0.82);
+		top: $gap-smaller * 0.75;
 	}
 
 	&.has-error input {
@@ -128,9 +143,5 @@
 		.has-dark-controls & {
 			color: color.adjust($alert-red, $lightness: 30%);
 		}
-	}
-
-	&:only-child {
-		margin-top: 1.5em;
 	}
 }
