--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/style.scss
@@ -85,6 +85,7 @@ $dialog-padding: 20px;
 		> * {
 			margin-left: unset;
 			margin-right: unset;
+			z-index: 1;
 		}
 	}
 
@@ -94,6 +95,11 @@ $dialog-padding: 20px;
 		justify-content: space-between;
 		width: 100%;
 		height: 100%;
+		pointer-events: none;
+
+		:where(.wc-block-next-previous-buttons__button) {
+			pointer-events: all;
+		}
 
 		&:where(.alignleft) {
 			justify-content: flex-start;
