--- a/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
+++ b/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
@@ -33,6 +33,11 @@ $fontSizes: (
 	line-height: 16px;
 }
 
+@mixin font-for-inputs-locked {
+	font-size: 16px;
+	line-height: 25px;
+}
+
 // We're treating mobile inputs as a special case, increasing the font-size to
 // 16px to avoid mobile Safari auto-zooming when focusing on the input. The
 // minimum font-size to prevent this behavior is 16px. Please don't change it!
