Product Gallery: Rename Large Image to Viewer (#62163)
* Rename product-gallery-large-image to product-gallery-viewer

* Rename ProductGalleryLargeImage to ProductGalleryViewer

* Update references to Viewer

* Fix references in tests

* Register the correct block

* Fix typo

* Fix typo

* Add ts expect error

* Update webpack entires

* Add changelog

* Fix missed rename

* Bring back original directory name so it's aligned with slug

* Update import

* Bring back the ProductGalleryLargeImage class

* Fix typo in changelog

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-gallery/style.scss
@@ -10,7 +10,7 @@ $dialog-padding: 20px;
 	overflow: hidden;
 
 	//When Product Image aspect ratio is auto, we are setting constraints
-	//on the large image container and display full images in square container.
+	//on the viewer container and display full images in square container.
 	&:has(.wc-block-components-product-image--aspect-ratio-auto) {
 		aspect-ratio: 1/1;
 	}
