Show product thumbnails on Blocks Checkout with multiple packages (#61625)
* New design for multiple packages

* Make sure extra packages are selected when switching to Ship mode

* Add unit tests

* Add changefile(s) from automation for the following project(s): woocommerce

* Decrease shipping package font size

* Styling improvements for collapsible shipping methods

* Hide third thumbnail on small screens

* Add extra checks

* Add unit tests for ShippingPackageItemIcon

* Set thumbnail object fit as cover

* Do not use existing address card class

* Fix linting error

* Fix unit tests

* Add better sanitization on package names

* Fix linting error

* Use separate card styles for local pickup

* Rename ProductImageProps to ShippingPackageItemIconProps

* Fix no address notices size

* Update JSDoc

* Update ShippingPackageItemIcon JSDoc description

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
+++ b/plugins/woocommerce/client/blocks/assets/css/abstracts/_mixins.scss
@@ -392,6 +392,17 @@ $fontSizes: (
 	}
 }
 
+@mixin card-styles() {
+	@include font-regular-locked;
+	border: 1px solid $universal-border-light;
+	padding: $gap;
+	margin: 0;
+	border-radius: $universal-border-radius;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+}
+
 @keyframes wc-skeleton-shimmer {
 	100% {
 		transform: translateX(100%);
