--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
@@ -73,7 +73,7 @@
 			gap: $gap-smallest;
 
 			.has-dark-controls & {
-				color: $gray-300;
+				color: currentColor;
 			}
 
 			.wc-block-editor-components-block-icon {
