--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
@@ -31,10 +31,10 @@ $component-background-hover: color-mix(in srgb, currentColor 12%, transparent);
 	border-radius: $universal-border-radius;
 	border: 2px solid transparent;
 	background-color: transparent;
-	color: $input-text-light;
+	color: currentColor;
 
 	.has-dark-controls & {
-		color: $input-text-dark;
+		color: currentColor;
 	}
 
 	&:hover,
