--- a/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-form/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/add-to-cart-form/style.scss
@@ -1,5 +1,5 @@
-@import "../../../base/components/skeleton/style";
-@import "../../../base/components/quantity-selector/style";
+@import "../../base/components/skeleton/style";
+@import "../../base/components/quantity-selector/style";
 
 .wc-block-add-to-cart-form {
 	/**
