--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/shipping-rates-control-package/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/shipping-rates-control-package/style.scss
@@ -112,11 +112,11 @@
 }
 
 .wc-block-components-shipping-rates-control__package-title {
-	@include font-regular-locked;
+	@include font-small-locked;
 }
 
 .wc-block-components-shipping-rates-control__package-items {
-	@include font-small-locked;
+	@include font-x-small-locked;
 	display: inline-block;
 	list-style: none;
 	margin: 0;
