--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/totals/footer-item/style.scss
@@ -33,6 +33,6 @@
 
 	.wc-block-components-totals-item__value,
 	.wc-block-components-totals-item__label {
-		@include font-large-locked;
+		@include font-medium-locked;
 	}
 }
