--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/address-card/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/address-card/style.scss
@@ -24,7 +24,7 @@
 	}
 }
 .wc-block-components-address-card__edit {
-	@include font-regular-locked;
+	@include font-small-locked;
 	background-color: transparent;
 	border: 0;
 	color: inherit;
