--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-fields-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-fields-block/style.scss
@@ -84,7 +84,7 @@
 }
 
 .wc-block-components-address-form__address_2-toggle {
-	@include font-regular-locked;
+	@include font-small-locked;
 	display: inline-block;
 	background: none;
 	border: none;
