--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-pickup-options-block/style.scss
@@ -42,7 +42,7 @@
 		}
 
 		.wc-block-components-radio-control__description-group {
-			@include font-regular-locked;
+			@include font-small-locked;
 
 			display: flex;
 			flex-direction: column;
