--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
@@ -69,7 +69,7 @@ $component-background-hover: color-mix(in srgb, currentColor 12%, transparent);
 
 .wc-block-checkout__shipping-method-option-title {
 	@include reset-typography();
-	@include font-regular-locked;
+	@include font-small-locked;
 	line-height: 28px; // Match the icon size
 	text-wrap: balance;
 }
