--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-terms-block/style.scss
@@ -1,5 +1,5 @@
 .wc-block-checkout__terms {
-	@include font-regular-locked;
+	@include font-small-locked;
 	margin: 0 0 $gap-large;
 
 	&.wc-block-checkout__terms--with-separator {
