--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-collection/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-collection/style.scss
@@ -6,7 +6,7 @@
 	}
 
 	h2.wp-block-heading {
-		@include font-regular-locked;
+		@include font-small-locked;
 	}
 
 	// Gutenberg adds margin between elements but notices are often empty
