--- a/plugins/woocommerce/client/blocks/packages/components/form-step/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/form-step/style.scss
@@ -83,7 +83,7 @@
 }
 
 .wc-block-components-checkout-step__description {
-	@include font-regular-locked;
+	@include font-small-locked;
 	margin: 0;
 }
 
