--- a/plugins/woocommerce/client/blocks/packages/components/title/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/title/style.scss
@@ -1,6 +1,6 @@
 @mixin title {
 	@include reset-box();
-	@include font-large-locked;
+	@include font-medium-locked;
 	word-break: break-word;
 	font-weight: 500;
 }
