--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
@@ -13,7 +13,7 @@ table.wc-block-cart-items {
 	width: 100%;
 
 	.wc-block-cart-items__header {
-		@include font-regular-locked;
+		@include font-small-locked;
 		text-transform: uppercase;
 
 		.wc-block-cart-items__header-image {
@@ -45,7 +45,7 @@ table.wc-block-cart-items {
 			margin: 0;
 		}
 		.wc-block-cart-item__prices {
-			@include font-regular-locked;
+			@include font-small-locked;
 		}
 
 		.wc-block-cart-item__quantity {
@@ -56,7 +56,7 @@ table.wc-block-cart-items {
 			.wc-block-cart-item__remove-link {
 				@include link-button();
 				@include hover-effect();
-				@include font-size(smaller);
+				@include font-x-small-locked;
 
 				text-transform: none;
 				white-space: nowrap;
@@ -66,7 +66,7 @@ table.wc-block-cart-items {
 			}
 		}
 		.wc-block-components-product-name {
-			@include font-regular-locked;
+			@include font-small-locked;
 			display: block;
 			max-width: max-content;
 			line-height: 1.4;
@@ -75,7 +75,7 @@ table.wc-block-cart-items {
 			}
 		}
 		.wc-block-cart-item__total {
-			@include font-regular-locked;
+			@include font-small-locked;
 			text-align: right;
 			line-height: 1.8;
 		}
