--- a/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-actions-block/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/checkout/inner-blocks/checkout-actions-block/style.scss
@@ -2,7 +2,7 @@
 	margin-bottom: $gap-larger;
 
 	.wc-block-checkout__actions_row {
-		@include font-regular-locked;
+		@include font-small-locked;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
