--- a/plugins/woocommerce/client/blocks/packages/components/textarea/style.scss
+++ b/plugins/woocommerce/client/blocks/packages/components/textarea/style.scss
@@ -1,6 +1,6 @@
 .wc-block-components-textarea {
 	@include reset-typography();
-	@include font-regular-locked;
+	@include font-small-locked;
 	background-color: $input-background-light;
 	border: 1px solid $universal-border-strong;
 	border-radius: $universal-border-radius;
